# rules_erlang

./: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  defs.bzl  go.mod  go.sum
.github/workflows/: test.yaml
gazelle/: BUILD.bazel  configure.go  def.bzl  deps.bzl  erlang_test.go  fix.go  generate.go  hex_metadata.go  hex_metadata_to_json.sh  kinds.go  language.go  resolve.go  term_to_json.go  term_to_json.sh
gazelle/testdata/basic_hex_tar/: BUILD.out
test/: WORKSPACE.bazel
